Add lab 4 and 5 without report

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # JSON файлы с заданиями
 
 *.json
+
+# Конфиг с важной информацией
+config.py
+
+# Вертуальное окружение для телеграм бота
+/telebot_env
